--- a/.github/workflows/firebase-hosting-manuelle.yml
+++ b/.github/workflows/firebase-hosting-manuelle.yml
@@ -4,6 +4,11 @@
 name: Deploy to Firebase Hosting manuelle
 'on':
   workflow_dispatch:
+    inputs:
+        BRANCH:
+            type: choice
+            options:
+            - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
