--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.2",
+    "firebase": "^9.22.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^5.0.2",
+    "react-scripts": "^5.0.1",
     "typescript": "3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:api":"json-server --watch src/models/db.json  --port=3001 --delay=500",
+    "start:api": "json-server --watch src/models/db.json  --port=3001 --delay=500",
     "build": "react-scripts build"
   },
   "eslintConfig": {
